--- a/main.tex
+++ b/main.tex
@@ -29,29 +29,29 @@
 \chair{математической кибернетики и компьютерных наук}
 
 % Тема работы
-\title{Тема работы}
+\title{Методы структурной диагностики: КТ и МРТ}
 
 % Курс
 \course{2}
 
 % Группа
-\group{251}
+\group{211}
 
 % Факультет (в родительном падеже) (по умолчанию "факультета КНиИТ")
 % \department{факультета КНиИТ}
 
 % Специальность/направление код - наименование
-% \napravlenie{02.03.02 "--- Фундаментальная информатика и информационные технологии}
+ \napravlenie{02.03.02 "--- Фундаментальная информатика и информационные технологии}
 % \napravlenie{02.03.01 "--- Математическое обеспечение и администрирование информационных систем}
 % \napravlenie{09.03.01 "--- Информатика и вычислительная техника}
-\napravlenie{09.03.04 "--- Программная инженерия}
+% \napravlenie{09.03.04 "--- Программная инженерия}
 % \napravlenie{10.05.01 "--- Компьютерная безопасность}
 
 % Для студентки. Для работы студента следующая команда не нужна.
 % \studenttitle{Студентки}
 
 % Фамилия, имя, отчество в родительном падеже
-\author{Иванова Ивана Ивановича}
+\author{Коновалова Александра Сергеевича}
 
 % Заведующий кафедрой 
 \chtitle{доцент, к.\,ф.-м.\,н.}
@@ -67,34 +67,14 @@
 
 % Научный руководитель (для реферата преподаватель проверяющий работу)
 \satitle{доцент, к.\,ф.-м.\,н.} %должность, степень, звание
-\saname{Г.\,Г.\,Наркайтис}
+\saname{О.\,А.\,Черкасова}
 
 % Руководитель практики от организации (руководитель для цифровой кафедры)
 \patitle{доцент, к.\,ф.-м.\,н.}
 \paname{С.\,В.\,Миронов}
 
-% Руководитель НИР
-\nirtitle{доцент, к.\,п.\,н.} % степень, звание
-\nirname{В.\,А.\,Векслер}
-
-% Семестр (только для практики, для остальных типов работ не используется)
-\term{2}
-
-% Наименование практики (только для практики, для остальных типов работ не
-% используется)
-\practtype{учебная}
-
-% Продолжительность практики (количество недель) (только для практики, для
-% остальных типов работ не используется)
-\duration{2}
-
-% Даты начала и окончания практики (только для практики, для остальных типов
-% работ не используется)
-\practStart{01.07.2022}
-\practFinish{13.01.2023}
-
 % Год выполнения отчета
-\date{2023}
+\date{2024}
 
 \maketitle
 
@@ -122,7 +102,10 @@
 \intro
 
 % После введения — серии \section, \subsection и т.д.
-
+\include{sections/history}
+\include{sections/kt}
+\include{sections/mrt}
+\include{sections/compare}
 \conclusion
 
 % Библиографический список, составленный вручную, без использования BibTeX
