--- a/main.tex
+++ b/main.tex
@@ -100,14 +100,14 @@
 % \defabbr
 
 \intro
-
+\input{sections/intro.tex}
 % После введения — серии \section, \subsection и т.д.
 \include{sections/history}
 \include{sections/kt}
 \include{sections/mrt}
 \include{sections/compare}
 \conclusion
-
+\input{sections/concl.tex}
 % Библиографический список, составленный вручную, без использования BibTeX
 %
 % \begin{thebibliography}{99}
