--- a/sections/kt.tex
+++ b/sections/kt.tex
@@ -1,6 +1,12 @@
 \section{Физическая основа компьютерной томографии (КТ)}
-Компьютерная томография (КТ) — это передовой метод визуализации, позволяющий получать послойные изображения организма с помощью рентгеновского излучения. В отличие от традиционной рентгенографии, КТ позволяет исследовать тело посрезово, обеспечивая высокую детализацию анатомических структур. Основной принцип компьютерной томографии заключается в измерении ослабления рентгеновского излучения, проходящего через тело пациента под различными углами[1].
-
+Компьютерная томография (КТ) — это передовой метод визуализации, позволяющий получать послойные изображения организма с помощью рентгеновского излучения. В отличие от традиционной рентгенографии, КТ позволяет исследовать тело посрезово, обеспечивая высокую детализацию анатомических структур. Основной принцип компьютерной томографии заключается в измерении ослабления рентгеновского излучения, проходящего через тело пациента под различными углами\cite{ktmrt}.
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.4\textwidth]{pic/4.png}
+    \caption{КТ-сканнер без кожуха: T — рентгеновская трубка; Х — направление веерного пучка; D — детекторы;
+    R — направление вращения гантри}
+    \label{fig:image1}
+\end{figure}
 \subsection{Принцип ослабления рентгеновского излучения}
 Ключевая физическая основа метода заключается в законе экспоненциального ослабления, который описывает процесс уменьшения интенсивности рентгеновского излучения при его прохождении через различные ткани организма. Данный процесс подчиняется следующей формуле:
 
@@ -8,21 +14,81 @@
 
 где \( I \) — интенсивность излучения после прохождения через ткань, \( I_0 \) — его начальная интенсивность, \( \mu \) — коэффициент ослабления, а \( x \) — толщина тонкого слоя однородной среды. 
 
-Значения коэффициента ослабления рентгеновского излучения существенно отличаются для костей, мягких тканей и полостей, что и определяет их визуальное различие на КТ-снимках[1].
+Значения коэффициента ослабления рентгеновского излучения существенно отличаются для костей, мягких тканей и полостей, что и определяет их визуальное различие на КТ-снимках\cite{ktmrt}.
 
 \subsection{Конструкция рентгеновской трубки и процесс сканирования}
 
-Компьютерная томография основывается на особой конструкции рентгеновской трубки и детекторов. В процессе сканирования рентгеновская трубка вращается вокруг пациента, создавая множество проекций излучения, которые фиксируются системой детекторов, расположенных напротив трубки. Эти данные затем подвергаются компьютерной обработке, что позволяет построить изображение среза. В современных КТ-аппаратах применяется технология спирального сканирования, при которой трубка и детекторы непрерывно вращаются, а стол с пациентом плавно продвигается через сканер. Это сокращает время процедуры и снижает лучевую нагрузку на пациента[1].
+Компьютерная томография основывается на особой конструкции рентгеновской трубки и детекторов. В процессе сканирования рентгеновская трубка вращается вокруг пациента, создавая множество проекций излучения, которые фиксируются системой детекторов, расположенных напротив трубки. 
+\begin{figure}[H]
+    \centering
+    \begin{minipage}{0.25\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{pic/1.png}
+        \caption{Схематическое изображение рентгеновских томографов первого поколения}
+        \label{fig:image1}
+    \end{minipage}
+    \begin{minipage}{0.35\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{pic/2.png}
+        \caption{Схематическое изображение рентгеновских томографов пятого поколения}
+        \label{fig:image2}
+    \end{minipage}
+\end{figure}
+
+Эти данные затем подвергаются компьютерной обработке, что позволяет построить изображение среза. В современных КТ-аппаратах применяется технология спирального сканирования, при которой трубка и детекторы непрерывно вращаются, а стол с пациентом плавно продвигается через сканер. Это сокращает время процедуры и снижает лучевую нагрузку на пациента\cite{ktmrt}.
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\textwidth]{pic/3.png}
+    \caption{Пошаговая и спиральная КТ}
+    \label{fig:image1}
+\end{figure}
 
 \subsection{Математическая обработка данных}
 
-Для создания изображения собранные данные необходимо подвергнуть математической обработке. Суть метода заключается в решении обратной задачи, предложенной математиком И. Радоном. Использование алгоритмов Радона позволяет получать точные изображения, основанные на данных, собранных с разных углов. В этом процессе выделяют несколько этапов: сбор данных о проекциях, их математическая обработка и формирование конечного изображения. Благодаря этому создаются послойные изображения в виде трехмерных элементов объема — вокселей, каждый из которых характеризуется своим коэффициентом ослабления[1].
+Для создания изображения собранные данные необходимо подвергнуть математической обработке. Суть компьютерной томографии математически можно проиллюстрировать так. В компьютерной томографии рентгеновская трубка и система коллимирования создают узкий веерообразный пучок лучей, рассеиваемых всеми элементарными объемами (вокселами) исследуемого слоя. Суммарный линейный коэффициент ослабления пучка фотонов коэффициент рассеивания при прохождении излучения через набор вокселов составляет
+\begin{center}
+    $\mu_{\Sigma} = \mu_1 + \mu_2 + \mu_3 + \dots + \mu_N$
+\end{center}
+где $\mu_1, \mu_2, \mu_3,\dots, \mu_n$ "--- коэффициенты ослабления пучка в каждом из элементарных объемов.
+
+Поскольку детекторы регистрируют интенсивность излучения, прошедшего через весь исследуемый объект, мы можем оценить по полученным данным только $\mu_{\Sigma}$:
+\begin{center}
+    $I = I_0 e^{-\mu_{\Sigma} x} = I_0 e^{-(\mu_1 + \mu_2 + \mu_3 + \dots + \mu_N)x}$
+\end{center}
+Найти коэффициенты поглощения для каждого воксела, необходимые для восстановления изображения, можно с помощью метода обратного проецирования (решения обратной задачи), предполагающего получение информации о характере поглощения рентгеновского излучения с многих направлений. Рассмотрим слой, состоящий из четырех элементарных объемов (рис.2.5).
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.4\textwidth]{pic/6.png}
+    \caption{Схема получения данных при компьютерной томографии}
+    \label{fig:image1}
+\end{figure}
+Рассматриваемый слой подвергается облучению с четырех направлений. Как видно из рис.2.5, в этом случае мы получаем ряд различных значений суммарных коэффициентов $\mu_{12}, \mu_{23}, \mu_{13}, \mu_{24}$, которые можно записать в виде системы уравнений:
+\[
+\begin{cases}
+\mu_1 + \mu_2 = \mu_{12}, \\
+\mu_2 + \mu_3 = \mu_{23}, \\
+\mu_1 + \mu_3 = \mu_{13}, \\
+\mu_1 + \mu_4 = \mu_{14}.
+\end{cases}
+\]  
+Решая уравнения, мы получаем коэффициенты ослабления для элементарных объемов. Таким образом можно оценить пропускающую способность ткани на разной глубине и по ней судить о ее структуре\cite{ktmrt}.
 
 \subsection{Коэффициенты ослабления для различных тканей}
 
 Различные ткани организма поглощают рентгеновское излучение по-раз-ному, что позволяет дифференцировать их на изображениях. Коэффициент поглощения костей может в 150 раз превышать коэффициент поглощения мягких тканей, что обеспечивает четкую видимость костей на фоне мягких тканей. Для усиления контраста вводятся специальные контрастные вещества, такие как йодсодержащие препараты, которые используются для исследования сосудов и других структур, поскольку обладают высоким атомным номером и сильно поглощают рентгеновские лучи.
 
+Выходные данные компьютерного томографа обычно даются в единицах Хаунсфилда (HU). У современных томографов эти числа лежат в пределах от 1024 до 3071 HU. Соотношение между коэффициентом линейного ослабления материала $\mu$ и соответствующей единицей Хаунсфилда имеет вид
+\begin{center}
+$H = \frac{\mu_i - \mu_{\text{воды}}}{\mu_{\text{матер}}} \cdot 1000$
+\end{center}
+Компьютерная обработка изображения позволяет различать более ста степеней изменения плотности исследуемых тканей — от 0 для воды до 100 и более для костей, что дает возможность дифференцировать различия нормальных и патологических участков тканей в пределах 0.5–1\%. Эту характеристику считают разрешением рентгеновского томографа, оно в 20–30 раз выше обычной рентгеновской установки\cite{ktmrt}.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.55\textwidth]{pic/5.png}
+\end{figure}
+
 \subsection{Преимущества и особенности метода}
 
-Одним из ключевых преимуществ КТ перед обычной рентгенографией является получение срезовых изображений, которые исключают наложение разных тканей. Это делает метод незаменимым для точной диагностики, особенно в нейрохирургии и онкологии. КТ позволяет получать трехмерные реконструкции, визуализируя анатомические структуры с высокой точностью. Использование КТ требует контроля дозы облучения, и современные аппараты оснащены специализированными режимами сканирования, которые снижают облучение, сохраняя при этом детальность изображения.
+Одним из ключевых преимуществ КТ перед обычной рентгенографией является получение срезовых изображений, которые исключают наложение разных тканей. Это делает метод незаменимым для точной диагностики, особенно в нейрохирургии и онкологии. КТ позволяет получать трехмерные реконструкции, визуализируя анатомические структуры с высокой точностью. Использование КТ требует контроля дозы облучения, и современные аппараты оснащены специализированными режимами сканирования, которые снижают облучение, сохраняя при этом детальность изображения\cite{ktmrt}.
 
